--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "docs": "start http://localhost:3000/api-docs"
   },
   "dependencies": {
-    "express": "^5.1.0",
+    "@prisma/client": "^5.7.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
-    "bcryptjs": "^3.0.2",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "@prisma/client": "^5.7.1",
-    "swagger-ui-express": "^5.0.1",
-    "swagger-jsdoc": "^6.2.8"
+    "multer": "^2.0.2",
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "prisma": "^5.7.1"
   }
