--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "docs": "start http://localhost:3000/api-docs"
+    "docs": "start http://localhost:3000/api-docs",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/unitario",
+    "test:integration": "node --experimental-vm-modules node_modules/jest/bin/jest.js test/integracao"
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
@@ -27,8 +32,11 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
     "@types/multer": "^2.0.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "supertest": "^7.1.4"
   }
 }
