--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "outputDirectory": "frontend/build",
-  "installCommand": "npm install",
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "/api/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/frontend/build/$1"
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
   ]
 }
