--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "api/**/*.js",
-      "use": "@vercel/node@3.0.7"
+      "use": "@vercel/node@3.0.7",
+      "config": {
+        "runtime": "nodejs18.x"
+      }
     }
   ],
   "routes": [
