--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "npx prisma generate",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "prisma": "^5.7.1",
-    "@prisma/client": "^5.7.1",
+    "express": "^4.21.2",
+    "prisma": "^5.22.0",
+    "@prisma/client": "^5.22.0",
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.7",
+    "dotenv": "^16.6.1",
+    "nodemailer": "^6.10.1",
     "express-async-handler": "^1.2.0"
   },
   "engines": {
