Add type module to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rpg-forja-estrelar",
   "version": "1.0.0",
   "description": "RPG Virtual Table",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
