--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "nodemailer": "^6.9.7",
-    "express-async-handler": "^1.2.0"
+    "express-async-handler": "^1.2.0",
+    "swagger-ui-express": "^5.0.0",
+    "swagger-jsdoc": "^6.2.8"
   },
   "engines": {
     "node": "18.x"
