--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "nodemailer": "^6.9.7",
     "express-async-handler": "^1.2.0",
     "swagger-ui-express": "^5.0.0",
-    "swagger-jsdoc": "^6.2.8"
+    "swagger-jsdoc": "^6.2.8",
+    "socket.io": "^4.7.5",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   },
   "engines": {
     "node": "18.x"
