--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "npx prisma generate && npx prisma db push"
   },
   "dependencies": {
@@ -26,5 +27,8 @@
   },
   "engines": {
     "node": "18.x"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
