--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "npx prisma generate && npx prisma db push"
+    "build": "npx prisma generate --schema=prisma/schema.prod.prisma && npx prisma db push --schema=prisma/schema.prod.prisma",
+    "postinstall": "npx prisma generate --schema=prisma/schema.prod.prisma"
   },
   "dependencies": {
     "express": "^4.18.2",
